--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             I'm a 19 year old who doesn't have her shit together</p>
             
             <p class="maintxt" id="link" >
-                <a href="Welcome.html" class="mainanchor">
+                <a href="welcome.html" class="mainanchor">
                     <b>Welcome to my world.</b>
                 </a>
             </p>
