--- a/welcome.html
+++ b/welcome.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a class="nav1" href="index.html">Home</a></li>
-                <li><a class="nav1" href="Welcome.html">About Me</a></li>
+                <li><a class="nav1" href="welcome.html">About Me</a></li>
                 <li><a class="nav1" href="work.html">My Work</a></li>
                 <li><a class="nav1" href="fun.html">Just for fun</a></li>
             </ul>
