--- a/work.html
+++ b/work.html
@@ -24,9 +24,9 @@
         <nav>
             <ul>
                 <li><a class="nav1" href="index.html">Home</a></li>
-                <li><a class="nav1" href="Welcome.html">About Me</a></li>
+                <li><a class="nav1" href="welcome.html">About Me</a></li>
                 <li><a class="nav1" href="work.html">My Work</a></li>
-                <li><a class="nav1" href="fun.html">Just for fun</a></li>
+                <li><a class="nav1" href="#">Just for fun</a></li>
             </ul>
         </nav>
 
